--- a/homepage.html
+++ b/homepage.html
@@ -220,6 +220,42 @@
         <p class="scroll-hint">Bấm zô đây để kéo xuống</p>
     </div>
 
+    <div class="frame_middle">
+        <div class="question-container container">
+            <div class="tenor-gif-embed" data-postid="25789758" data-share-method="host" data-width="100%">
+                <a href="https://tenor.com/view/tkthao219-bubududu-gif-25789758">Tkthao219 Bubududu Sticker</a>
+                from
+                <a href="https://tenor.com/search/tkthao219-stickers">Tkthao219 Stickers</a>
+            </div>
+            <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+
+            <h2 class="question">Xíu có yêu anh hem?</h2>
+            <div class="button-container">
+                <button class="yes-btn btn js-yes-btn">Có</button>
+                <button class="no-btn btn js-no-btn">Khum</button>
+            </div>
+        </div>
+
+        <div class="result-container container">
+            <video class="gif-result" src="videos/cute_love_gif.mp4" autoplay loop></video>
+            <h2>Anh biết mà😍!</h2>
+        </div>
+
+        <div class="cssload-main">
+            <div class="cssload-heart">
+                <span class="cssload-heartL"></span>
+                <span class="cssload-heartR"></span>
+                <span class="cssload-square"></span>
+            </div>
+            <div class="cssload-shadow"></div>
+        </div>
+
+        <button class="scroll-down scroll-down-middle">
+            <span class="down_icon"></span>
+        </button>
+        <p class="scroll-hint scroll-hint-middle">Bấm zô đây để kéo xuống</p>
+    </div>
+
     <div class="frame-2">
         <p class="paper-hint">Bấm vào tờ giấy đi em :3</p>
         <div class="paper">
