--- a/homepage.html
+++ b/homepage.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="./static/css/main.css">
 </head>
 
 <body>
     <!-- Background music: put happybirthday_piano.mp3 in the same folder -->
-    <audio id="bg-music" src="audio/happybirthday_piano.mp3" preload="auto" loop playsinline></audio>
+    <audio id="bg-music" src="./audio/happybirthday_piano.mp3" preload="auto" loop playsinline></audio>
 
     <script>
         // Autoplay with user interaction fallback
@@ -237,7 +237,7 @@
         </div>
 
         <div class="result-container container">
-            <video class="gif-result" src="videos/cute_love_gif.mp4" autoplay loop></video>
+            <video class="gif-result" src="./videos/cute_love_gif.mp4" autoplay loop></video>
             <h2>Anh biết mà😍!</h2>
         </div>
 
@@ -268,7 +268,7 @@
     </div>
 
 
-    <script src="/static/scripts/main.js"></script>
+    <script src="./static/scripts/main.js"></script>
 </body>
 
 </html>
