--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="./static/images/favicon.jpg">
+    <title>My Love</title>
     <link rel="stylesheet" href="./static/css/main.css">
 </head>
 
