--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" type="image/x-icon" href="./static/images/favicon.jpg">
     <title>My Love</title>
     <link rel="stylesheet" href="./static/css/main.css">
@@ -223,12 +225,12 @@
 
     <div class="frame_middle">
         <div class="question-container container">
-            <div class="tenor-gif-embed" data-postid="25789758" data-share-method="host" data-width="100%">
-                <a href="https://tenor.com/view/tkthao219-bubududu-gif-25789758">Tkthao219 Bubududu Sticker</a>
-                from
-                <a href="https://tenor.com/search/tkthao219-stickers">Tkthao219 Stickers</a>
-            </div>
-            <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+            <!-- SỬA video với các thuộc tính chống fullscreen -->
+            <video class="tenor-gif-embed" autoplay loop muted playsinline webkit-playsinline x5-playsinline
+                disablePictureInPicture controlslist="nodownload nofullscreen noremoteplayback"
+                oncontextmenu="return false;">
+                <source src="./videos/bubududu.mp4" type="video/mp4">
+            </video>
 
             <h2 class="question">Xíu có yêu anh hem?</h2>
             <div class="button-container">
@@ -238,7 +240,11 @@
         </div>
 
         <div class="result-container container">
-            <video class="gif-result" src="./videos/cute_love_gif.mp4" autoplay loop></video>
+            <!-- SỬA video result -->
+            <video class="gif-result" src="./videos/cute_love_gif.mp4" autoplay loop muted playsinline
+                webkit-playsinline x5-playsinline disablePictureInPicture
+                controlslist="nodownload nofullscreen noremoteplayback" oncontextmenu="return false;">
+            </video>
             <h2>Anh biết mà😍!</h2>
         </div>
 
